..F....... [ZBX-20781] fixed wrong number of rows being shown in collapsed subfilter

--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -2343,9 +2343,10 @@ div.dashboard-grid-widget-tophosts z-bar-gauge {
 .subfilter {
   margin-right: 10px;
   white-space: nowrap;
-  line-height: 14px;
   height: 16px;
   margin-bottom: 2px; }
+  .subfilter > a {
+    line-height: 14px; }
 
 .subfilter-enabled {
   background-color: #768d99;
